SERVER-59114 Retry in ReshardingOplogFetcher on Interruption errors.